# hdradio_lb_st_drv

./: .gitignore  Android.bp  archive.sh  buildall.sh  buildradio.sh  checkadtlocal.sh  cleanbuild.sh  co.go  copy2git.sh  lb_buildradio.sh  readme.txt  setup.sh  src2target.sh  tcradio-env.go
app/: tcradioapp.pro
app/res/: main.qml  qml.qrc
app/res/layer/: FreqText.qml  Indicator.qml  MetaText.qml  PresetLayer.qml  SideMenu.qml  SourceMenu.qml  StationLogo.qml  TunerLayer.qml
app/res/popup/: UpdateStationPopup.qml  VersionPopup.qml
app/res/scene/: radio_am_main.qml  radio_direct_tune.qml  radio_fm_main.qml  radio_station_list.qml
app/res/view/: AnimationText.qml  ImageButton.qml  ImageChanger.qml  (+6 more)
app/src/: AppPreference.cpp  DBusInterface.cpp  DBusMsgDefNames.c  QMLInterface.cpp  RadioInterface.cpp  TCDBus.cpp  main.cpp
gitconf/: buildradio.sh
gitconf/tc-radio-app/: Makefile.am  configure.ac
gitconf/tc-radio-drv-silab/default/: Makefile.am
gitconf/tc-radio-drv-silab/v4px/: .gitignore  Makefile.am  configure.ac
gitconf/tc-radio-drv-st/default/: Makefile.am  configure.ac
gitconf/tc-radio-drv-st/v4px/: Makefile.am
gitconf/tc-radio-hal/default/: Makefile.am  configure.ac
gitconf/tc-radio-hal/v4px/: Makefile.am  configure.ac
gitconf/tc-radio-hd-mw/default/: configure.ac
gitconf/tc-radio-hd-mw/v4px/: Makefile.am  configure.ac
gitconf/tc-radio-hd/default/: .gitignore  Makefile.am  configure.ac
gitconf/tc-radio-hd/v4px/: Makefile.am  configure.ac
gitconf/tc-radio-mw/default/: Makefile.am
hal/: Android.bp  Makefile.am  configure.ac  hal-env.go
hal/src/: DMBLog.h  tcradio_hal.c  tcradio_hal.h
hal/src/audio/: dev_audio.c  dev_audio.h  dev_audio_android.c
hal/src/conf/: tcradio_hal_config.c  tcradio_hal_config.h
hal/src/cui/: tcradio_hal_cui.c
hal/src/fifo/: tcradio_hal_fifo.c  tcradio_hal_fifo.h
hal/src/util/: tcradio_hal_mutex.c  tcradio_hal_mutex.h  tcradio_hal_rbuf.c  tcradio_hal_rbuf.h  tcradio_hal_utils.c  tcradio_hal_utils.h
hd/: Android.bp  Makefile.am  configure.ac  hd-env.go
hd/doc/: README
hd/lib/v2px/: README.txt  libHDRadio.so.2.10.3
hd/lib/v2px/android/: libHDRadio.so.2.6.3
hd/lib/v2px/xperi/: libHDRadio.so.2.6.10
hd/lib/v3px/: README.txt
hd/lib/v3px/xperi/: libHDRadio.so.2.10.3  libHDRadio.so.2.6.10
hd/lib/v4px/: README.txt
hd/lib64/v3px/: README.txt
hd/lib64/v3px/android/v10/xperi/: libHDRadio.so.2.6.10
hd/lib64/v3px/android/v11/: libHDRadio.so.2.6.10
hd/lib64/v3px/android/v12/: README.txt
hd/lib64/v3px/xperi/: libHDRadio.so.2.6.10
hd/lib64/v4px/: README.txt
hd/lib64/v4px/a53/: libHDRadio.so.2.10.3  libHDRadio.so.2.10.8
hd/lib64/v4px/a72/android/v10/: libHDRadio.so.2.10.3
hd/lib64/v4px/a72/xperi/: libHDRadio.so.2.6.10
hd/src/api/: tchdr_aas.c  tchdr_aas.h  tchdr_alert.c  tchdr_alert.h  tchdr_api.c  tchdr_api.h  tchdr_callback.c  tchdr_callback.h  tchdr_psd.c  tchdr_psd.h  tchdr_sig.c  tchdr_sig.h  tchdr_sis.c  tchdr_sis.h  tchdr_types.h
hd/src/cmdproc/: tchdr_cmdaas.c  tchdr_cmdaas.h  tchdr_cmdcallbacks.c  tchdr_cmdcallbacks.h  tchdr_cmdiboc.c  tchdr_cmdiboc.h  tchdr_cmdopcode.h  tchdr_cmdproc.c  tchdr_cmdproc.h  tchdr_cmdsispsd.c  tchdr_cmdsispsd.h  tchdr_cmdsys.c  tchdr_cmdsys.h  tchdr_cmdtune.c  tchdr_cmdtune.h
hd/src/core/: hdrAas.h  hdrAlerts.h  hdrAudio.h  hdrAudioResampler.h  hdrAutoAlign.h  hdrBasicTypes.h  hdrBbSrc.h  hdrBlend.h  hdrBlendCrossfade.h  hdrConfig.h  hdrCore.h  hdrPhy.h  hdrPsd.h  hdrSig.h  hdrSis.h  hdrTest.h
hd/src/example/: tchdr_cui.c  tchdr_cui_audio.c  tchdr_cui_audio.h  tchdr_cui_if.c  tchdr_cui_if.h
hd/src/framework/: tchdr_audio.c  tchdr_audio.h  tchdr_bbinput.c  tchdr_bbinput.h  tchdr_framework.c  tchdr_framework.h  tchdr_hdlibcb.c  tchdr_hdlibcb.h
hd/src/mw/: tcaud_resampler.h  tchdr_callback_conf.c  tchdr_callback_conf.h  tchdr_common.c  tchdr_common.h  tchdr_dat.h  tchdr_debug.c  tchdr_debug.h  tchdr_msg.c  tchdr_msg.h  tchdr_service.c  tchdr_service.h  tchdr_systypes.h
hd/src/support/: tchdr_bytestream.c  tchdr_bytestream.h  tchdr_cbuffer.c  tchdr_cbuffer.h  tchdr_ethernet.c  tchdr_ethernet.h  tchdr_fader.c  tchdr_fader.h  tchdr_log.h  tchdr_std.c  tchdr_std.h  tchdr_temp.c  tchdr_temp.h
hdcore/: Makefile.am  configure.ac  makelib.sh
hdcore/src/: hdradioDummy.c
hdcore/src/inc/: hdrAas.h  hdrAlerts.h  hdrAudio.h  hdrAudioResampler.h  hdrAutoAlign.h  hdrBbSrc.h  hdrBlend.h  hdrBlendCrossfade.h  hdrConfig.h  hdrCore.h  hdrPhy.h  hdrSig.h  hdrSis.h  hdrTest.h
mw/: Android.bp  Makefile.am  configure.ac  hd-mw-env.go
mw/src/: DMBLog.c  tcradio_api.c  tcradio_api.h
mw/src/bg/: tcradio_bg.c  tcradio_bg.h
mw/src/conf/: tcradio_callback.c  tcradio_config.c
mw/src/cui/: tcradio_cui.c
mw/src/hd/: tcradio_hdr_if.c  tcradio_hdr_if.h
mw/src/rds/: tcradio_rds.c  tcradio_rds_api.h  tcradio_rds_def.h  tcradio_rds_if.c  tcradio_rds_parser.c  tcradio_rds_sync.c
mw/src/service/: tcradio_service.c  tcradio_service.h
mw/src/sound/: tcradio_sound.c  tcradio_sound.h
mw/src/submgr/: dev_sub_ipc.c  dev_sub_ipc.h  tcradio_sub_manager.c  tcradio_sub_manager.h
mw/src/util/: tcradio_memory.c  tcradio_memory.h  tcradio_msgq.c  tcradio_msgq.h  tcradio_temp.c  tcradio_temp.h  tcradio_thread.c  tcradio_thread.h  tcradio_utils.c  tcradio_utils.h
peri/: Android.bp  Makefile.am  configure.ac  peri-env.go
peri/src/: tcradio_types.h
peri/src/conf/: tcradio_peri_config.c  tcradio_peri_config.h
peri/src/gpio/: dev_gpio.c  dev_gpio.h
peri/src/i2c/: dev_i2c.c  dev_i2c.h
peri/src/i2s/: dev_blend_audio_i2s.c  dev_blend_audio_i2s.h  dev_iq_i2s.c  dev_iq_i2s.h
peri/src/spi/: dev_spi.c  dev_spi.h
tuner/: Android.bp  Makefile.am  configure.ac  tuner-env.go
tuner/src/max2175/: max2175_core.c  max2175_core.h  max2175_hal.c  max2175_hal.h  max2175_regfunc.c  max2175_tables.c
tuner/src/si479xx/: si479xx_commanddefs.h  si479xx_core.c  si479xx_core.h  si479xx_hal.c  si479xx_hal.h
tuner/src/star/: star_driver.c  star_driver.h  star_protocol.c
tuner/src/x0tuner/: x0tuner_core.c  x0tuner_core.h  x0tuner_hal.c  x0tuner_hal.h  x0tuner_patch.c
(+13 files in other folders)
